2006-06-19  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (libintl_printf): Define to __printf__ on NetBSD,
	Cygwin, mingw.
	Reported by Henry Nelson <netb@yuba.ne.jp>.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* bindtextdom.c (gl_rwlock_define, gl_rwlock_wrlock, gl_rwlock_unlock)
	[_LIBC]: New macros.
	(_nl_state_lock, set_binding_values): Use gl_rwlock_* instead of
	__libc_rwlock_*.
	* dcigettext.c (gl_rwlock_define_initialized, gl_rwlock_rdlock,
	gl_rwlock_wrlock, gl_rwlock_unlock) [_LIBC]: New macros.
	(tree_lock, _nl_state_lock, DCIGETTEXT): Use gl_rwlock_* instead of
	__libc_rwlock_*.
	* finddomain.c (gl_rwlock_define_initialized, gl_rwlock_rdlock,
	gl_rwlock_wrlock, gl_rwlock_unlock) [_LIBC]: New macros.
	(_nl_find_domain): Use gl_rwlock_* instead of __libc_rwlock_*.
	* textdomain.c (gl_rwlock_define, gl_rwlock_wrlock, gl_rwlock_unlock)
	[_LIBC]: New macros.
	(_nl_state_lock, TEXTDOMAIN): Use gl_rwlock_* instead of
	__libc_rwlock_*.
	Needed because NetBSD 3.0 <pthread.h> does
	#define pthread_rwlock_rdlock __libc_rwlock_rdlock etc.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update for NetBSD 3.0.

2006-05-24  Bruno Haible  <bruno@clisp.org>

	* printf-args.c (printf_fetchargs): Turn NULL pointers for
	TYPE_STRING and TYPE_WIDE_STRING into a non-NULL replacement.
	Reported by Thorsten Maerz <torte@netztorte.de> via
	Aaron Stone <aaron@serendipity.cx>.

2006-05-15  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c (category_to_name): Adjust for _nl_category_names
	change.

2006-04-06  Ulrich Drepper  <drepper@redhat.com>

	* finddomain.c (_nl_find_domain): We never return NULL if we found the
	locale.

2005-12-21  Roland McGrath  <roland@redhat.com>

	* l10nflist.c (_nl_make_l10nflist): Free ABS_FILENAME when later malloc
	fails.

2006-05-17  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* loadinfo.h (PATH_SEPARATOR) [CYGWIN]: Define as ':'.
	* localename.c (WIN32_NATIVE): Renamed from WIN32.