@@ -1,3 +1,9 @@
+2006-06-23  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.m4 (gt_INTL_SUBDIR_CORE): Check for argz_* functions,
+	not __argz*. Avoids warnings on Cygwin.
+	Reported by Eric Blake.
+
 2006-06-17  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.m4 (AM_INTL_SUBDIR): Don't redefine __libc_rwlock_* symbols.
